ISTIO/service-mesh-gw.yaml
apiVersion: networking.istio.io/v1alpha3

kind: Gateway

metadata:

  name: ingress-gateway

spec:

  selector:

    istio: ingressgateway # use istio default controller

  servers:

  - port:

      number: 80

      name: http

      protocol: HTTP

    hosts:

    - '*'

---

apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:

  name: ingress-gateway

spec:

  hosts:

  - '*'

  gateways:

  - ingress-gateway

  http:

  - match:

    - uri:

        exact: /

    route:

    - destination:

        host: gateway

        port:

          number: 8080
